--- a/lib/libft/Makefile
+++ b/lib/libft/Makefile
@@ -14,7 +14,7 @@ SRCS	= ft_split.c ft_striteri.c ft_strmapi.c ft_putnbr_fd.c ft_putendl_fd.c ft_p
 
 SRCS_BONUS = ft_lstnew.c ft_lstadd_front.c ft_lstsize.c ft_lstlast.c ft_lstadd_back.c ft_lstdelone.c ft_lstclear.c ft_lstiter.c ft_lstmap.c 
 
-CC		= gcc
+CC		= cc
 
 CFLAGS	= -Wall -Wextra -Werror
 
@@ -23,27 +23,27 @@ RM		= rm -f
 NAME	= libft.a
 
 
-OBJS	= ${SRCS:.c=.o}
+OBJS	= $(SRCS:.c=.o)
 
-OBJS_BONUS = ${SRCS_BONUS:.c=.o}
+OBJS_BONUS = $(SRCS_BONUS:.c=.o)
 
 
-all:		${NAME}
+all:		$(NAME)
 
-${NAME}:	${OBJS}
+$(NAME):	$(OBJS)
 			ar rcs $@ $^
 
 %.o:%.c
-			${CC} ${CFLAGS}  -c $^ -o $@
+			$(CC) $(CFLAGS)  -c $^ -o $@
 
 clean:
-			${RM} ${OBJS} ${OBJS_BONUS}
+			$(RM) $(OBJS) $(OBJS_BONUS)
 
 fclean:		clean
-			${RM} ${NAME}
+			$(RM) $(NAME)
 
-re:			fclean ${NAME}
+re:			fclean $(NAME)
 
-bonus:		${OBJS_BONUS}
-			ar rcs ${NAME} ${OBJS_BONUS}
+bonus:		$(OBJS_BONUS)
+			ar rcs $(NAME) $(OBJS_BONUS)
 
